--- a/blog.html
+++ b/blog.html
@@ -474,7 +474,9 @@
 
     <main>
       <div class="vsys-container">
-        <h1 class="hero__title section-title--gradient">READ OUR BLOG</h1>
+        <h1 class="hero__title section-title--gradient blog__title">
+          READ OUR BLOG
+        </h1>
 
         <section>
           <ul class="article-card__list">
