--- a/dedicated.html
+++ b/dedicated.html
@@ -234,7 +234,7 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#">Hosting</a>
+                <a class="dropdown__button" href="/blog.html">Blog</a>
               </li>
 
               <li class="navbar__item">
