--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               <p class="topbar-quality__title">
                 TRUSTED HOSTING PROVIDER SINCE 2009
               </p>
-              <span class="menu-arrow--right"></span>
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
             </a>
           </div>
 
@@ -260,7 +260,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#">Hosting</a>
+                <a class="dropdown__button" href="./blog.html">Blog</a>
               </li>
 
               <li class="navbar__item">
