--- a/author-page.html
+++ b/author-page.html
@@ -55,7 +55,7 @@
               <p class="topbar-quality__title">
                 TRUSTED HOSTING PROVIDER SINCE 2009
               </p>
-              <span class="menu-arrow--right"></span>
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
             </a>
           </div>
 
@@ -233,7 +233,7 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="#">Hosting</a>
+                <a class="dropdown__button" href="./blog.html">Blog</a>
               </li>
 
               <li class="navbar__item">
@@ -470,7 +470,6 @@
         </div>
       </div>
     </header>
-
     <main class="vsys-container">
       <div>
         <a class="author-page__breadcrumbs" href="./blog.html"
