--- a/dedicated.html
+++ b/dedicated.html
@@ -56,7 +56,7 @@
               <p class="topbar-quality__title">
                 TRUSTED HOSTING PROVIDER SINCE 2009
               </p>
-              <span class="menu-arrow--right"></span>
+              <span class="menu-arrow menu-arrow--big menu-arrow--right"></span>
             </a>
           </div>
 
@@ -234,7 +234,7 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__button" href="/blog.html">Blog</a>
+                <a class="dropdown__button" href="./blog.html">Blog</a>
               </li>
 
               <li class="navbar__item">
@@ -471,7 +471,6 @@
         </div>
       </div>
     </header>
-
     <!-- Dedicated main  -->
 
     <section class="hero dedicated-hero">
