--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="https://dev.vsys.host/templates/twenty-one/css/all.min.css?v=a44b3b"
       rel="stylesheet"
     />
@@ -62,7 +62,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
     <link
       href="https://dev.vsys.host/assets/css/fontawesome-all.min.css"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
