--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="https://dev.vsys.host/templates/twenty-one/css/all.min.css?v=a44b3b"
       rel="stylesheet"
     />
@@ -36,7 +36,7 @@
     <link
       href="https://dev.vsys.host/assets/css/fontawesome-all.min.css"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
